The menu is no longer visible if it exceeds the breakpoint (even if it is active)

--- a/assets/css/mobile-menu.css
+++ b/assets/css/mobile-menu.css
@@ -1,7 +1,7 @@
 /**
  * mobile_menu extension for Contao Open Source CMS
  *
- * Copyright (C) 2011-2014 Codefog
+ * Copyright (C) 2011-2015 Codefog
  *
  * @package mobile_menu
  * @author  Codefog <http://codefog.pl>
@@ -28,10 +28,6 @@
     overflow-y: scroll;
 }
 
-.mobile_menu.active {
-    display: block;
-}
-
 /**
  * Overlay
  */
@@ -46,10 +42,6 @@
     background: rgba(0,0,0,0.5);
 }
 
-.mobile_menu_overlay.active {
-    display: block;
-}
-
 /**
  * Trigger
  */
@@ -58,13 +50,17 @@
 }
 
 @media (max-width: 991px) {
-    .mobile_menu_trigger.display_tablets {
+    .mobile_menu_trigger.display_tablets,
+    .mobile_menu.display_tablets.active,
+    .mobile_menu_overlay.display_tablets.active {
         display: block;
     }
 }
 
 @media (max-width: 767px) {
-    .mobile_menu_trigger.display_phones {
+    .mobile_menu_trigger.display_phones,
+    .mobile_menu.display_phones.active,
+    .mobile_menu_overlay.display_phones.active {
         display: block;
     }
 }
